--- a/OpenLayers-2.11/theme/default/google.css
+++ b/OpenLayers-2.11/theme/default/google.css
@@ -1,7 +1,8 @@
 .olLayerGoogleCopyright {
-    right: 3px;
-    bottom: 2px;
-    left: auto;  
+    right: 15px;
+    bottom: 10px;
+    left: auto;
+border-radius: 20px 20px 20px 20px;
 }
 .olLayerGoogleV3.olLayerGoogleCopyright {
     bottom: 0px;
@@ -9,9 +10,13 @@
 }
 .olLayerGooglePoweredBy {
     left: 2px;
-    bottom: 2px;   
+    bottom: 15px;
 }
 .olLayerGoogleV3.olLayerGooglePoweredBy {
     bottom: 0px !important;
+}
+div.olMapViewport {
+    text-align: left;
+    border-radius: 20px 20px 20px 20px;
 }
 
